buildscript {
    repositories {
        jcenter()
    }
    dependencies {
        classpath group: 'io.qameta.allure', name: 'allure-gradle', version: '2.8.1'
    }
}

plugins {
    id 'java'
    id 'application'
    id 'io.qameta.allure' version '2.8.1'
}

group 'cloud.autotests'
version '1.0'
sourceCompatibility = 1.8
targetCompatibility = 1.8
defaultTasks 'help'

ext {
    allureVersion = '2.13.3'
    junitVersion = '5.6.0'
}

repositories {
    jcenter()
    mavenCentral()
}


allure {
    version = "${allureVersion}"
    autoconfigure = true
    aspectjweaver = true
    useJUnit5 {
        version = "${allureVersion}"
    }
}

dependencies {
    testImplementation 'org.aspectj:aspectjweaver:1.9.5'
    testImplementation 'com.codeborne:selenide:5.11.1'
    testImplementation "io.qameta.allure:allure-selenide:${allureVersion}"
    testImplementation "io.qameta.allure:allure-rest-assured:${allureVersion}"
    testImplementation 'io.rest-assured:rest-assured:4.1.2'
    testImplementation 'ch.qos.logback:logback-classic:1.2.3'
//    compile group: 'io.github.cdimascio', name: 'java-dotenv', version: '5.2.1'

    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(Test) {
    systemProperties = System.properties as Map<String, ?>
}

task start_tests(type: Test) {
    useJUnitPlatform {
        includeTags 'google'
        includeTags 'yandex'
        includeTags 'tinkoff'
    }
}


task google_tests(type: Test) {
    useJUnitPlatform {
        includeTags 'google'
    }
}

task yandex_tests(type: Test) {
    useJUnitPlatform {
        includeTags 'yandex'
    }
}

task tinkoff_tests(type: Test) {
    useJUnitPlatform {
        includeTags 'tinkoff'
    }
}

